# transcriber

./: .gitignore  COPYING  GPLv3  README.md  pyproject.toml  transcribe.py
src/transcribe/: __init__.py
