[tool.poetry]
name = "transcriber"
version = "0.1.0"
description = ""
authors = ["Daniel Souza <me@posix.dev.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
urllib3 = "^1.26.17"
markdownify = "^0.11.6"
beautifulsoup4 = "^4.11.1"
PyYAML = "^6.0"
rich = "^13.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
